# nfc

./: .gitignore  CHANGELOG.md  README.md  flake.nix  haskell-nfc.cabal  package.yaml  stack.yaml
cbits/: NFC.c
examples/: print-mifare-uid-forever.cabal  print-mifare-uid-forever.hs
nix/: nfc.nix
src/Bindings/: NFC.chs
