cabal-version:       2.4
name:                haskell-nfc
version:             0.2.0.0


library
  exposed-modules:
    Bindings.NFC

  build-depends:       base <5
    , bytestring

  hs-source-dirs: src

  build-tools: c2hs

  c-sources: cbits/NFC.c

  extra-libraries: nfc

  default-language:    Haskell2010
